# halo2-wasm

./: Cargo.toml  README.md
src/: build.rs  circuit.rs  gadget.rs  keys.rs  lib.rs  proof.rs  utils.rs
src/gadget/: mux.rs
src/gadget/mux/: chip.rs
