[lib]
crate-type = ["cdylib", "rlib"]

[package]
name = "mux1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"halo2" = "0.1.0-beta.1"
pasta_curves = "0.2.1"
ff = "0.11"
getrandom = { version = "0.2", features = ["js"] }

wasm-bindgen-rayon = "1.0"
wasm-bindgen = "0.2.78"
js-sys = "0.3.55"
